--- a/wp-content/uploads/elementor/css/post-34.css
+++ b/wp-content/uploads/elementor/css/post-34.css
@@ -1,1 +1,1 @@
-.elementor-34 .elementor-element.elementor-element-08b7d07 .elementor-spacer-inner{--spacer-size:389px;}:root{--page-title-display:none;}
+.elementor-34 .elementor-element.elementor-element-d836501{padding:30px 0px 30px 0px;}.elementor-34 .elementor-element.elementor-element-f16dbea .elementor-heading-title{font-family:var( --e-global-typography-primary-font-family ), Sans-serif;font-weight:var( --e-global-typography-primary-font-weight );}.elementor-34 .elementor-element.elementor-element-08b7d07 .elementor-spacer-inner{--spacer-size:600px;}:root{--page-title-display:none;}
